# diceroller

./: .eslintrc.yml  .gitignore  Cargo.toml  Dockerfile  LICENSE_MIT  Makefile  README.md  TODO.md  package-lock.json  package.json  requests.http  webpack.config.js
.github/workflows/: cd.yml  ci.yml
app/: Cargo.toml  Dockerfile  index.html  manifest.json  serviceworker.js
app/.cargo/: config.toml
app/src/: lib.rs
diceroller/: Cargo.toml
diceroller/src/: lib.rs
public/: index.html  serviceworker.js
public/messages/: de.json  default.json
src/: index.ts
src/control/: index.ts
src/models/: index.ts
src/script/: index.ts
src/script/browser/: index.ts  materialize.d.ts
src/script/control/: index.ts
src/script/models/: index.ts
src/script/utils/: index.ts
src/script/utils/i18n/: index.ts  messages-de.json  messages-en.json
src/script/views/: dice.ts  index.ts
src/styles/: _colors.sass  _dice.sass  _overrides.sass  _variables.sass  colors.sass  index.sass
src/utils/: index.ts
src/views/: index.ts
swrpgdiceroller/: Cargo.toml
test/models/: models.test.ts
