[package]
name = "swrpgdiceroller-app"
version = "0.1.0"
authors = ["Alexander Metzner <alexander.metzner@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
swrpgdiceroller = { path = "../swrpgdiceroller"}
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6", optional = true }
web-sys = { version = "0.3.4", features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]}
log = "0.4"
console_log = {version = "0.2", features = ["color"] }
seed = "0.8.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
