[package]
name = "diceroller-app"
version = "0.4.1"
authors = ["Alexander Metzner <alexander.metzner@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
diceroller = { path = "../diceroller"}
wasm-bindgen = "0.2.63"
wasm-bindgen-futures = "0.4.18"
console_error_panic_hook = { version = "0.1.6", optional = true }
web-sys = { version = "0.3.4", features = [
  'Document',
  'Window',
  'Clipboard',
  'History',
]}
log = "0.4"
console_log = {version = "0.2", features = ["color"] }
seed = "0.8.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
basic-http-server = "0.8.1"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
